# FrameFinder

./: .env.example  .gitignore  README.md  run.sh  setup.sh  test_whisper_api.py
backend/: main.py  manage.py  pyproject.toml
backend/api/: models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_add_segment_text_to_chatmessage.py  0003_video_processing_status.py
backend/framefinder_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/processing/: langgraph_agent.py  tasks.py  video_utils.py
backend/websocket/: consumers.py  routing.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  SearchBar.tsx  VideoArea.tsx  VideoPlayer.tsx  VideoUpload.tsx
